[build-system]
requires = ["pygame"]
build-backend = "pygame.build"
[project]
name = "GraphAND_ANDREGP222"
version = "0.0.1"
authors = [
  { name="André Glycerio", email="aglycerio@gmail.com" },
]
description = "makes graphs(kinda Janky)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/andregp222/GraphAND.git"
Issues = "https://github.com/andregp222/GraphAND.git"
